# DPP_BotTest

./: .gitignore  CMakeLists.txt  README.md  SimpleBot.sln  SimpleBot.vcxproj
lib/libdpp-10.0.30-linux-x64/lib/cmake/dpp/: dpp-release.cmake  dpp.cmake
lib/libdpp-10.0.30-linux-x64/lib/pkgconfig/: dpp.pc
src/: main.cpp
